<resources>
    <string name="app_name">Play Hub TV</string>
    <string name="connect_phone_title">Connect your phone</string>
    <string name="server_starting">Starting local control server...</string>
    <string name="qr_code_description">QR code for connecting phone</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="zero_time">0:00</string>
    <string name="unknown_duration">Live</string>
    <string name="player_controls_hint">OK: play/pause    Left/Right: seek 10s    Back: hide controls</string>
</resources>
